[VO-2622] added a full stop to last sentence in login text. Increased the width of text area to prevent link from wrapping.

--- a/app/styles/pages/_login.scss
+++ b/app/styles/pages/_login.scss
@@ -60,7 +60,7 @@
     margin: 0 0 20px;
 
     .login-help-inner {
-      width: 440px;
+      width: 445px;
       margin: 0 auto;
     }
 
